# neatify

./: Cargo.toml  README.md  prompt.md
.github/workflows/: release.yml
src/: api.rs  cache.rs  config.rs  doc.rs  formatting.rs  lib.rs  lsp.rs  main.rs  manifest.rs  rhai_bindings.rs
